dataset1235/2025-2/2947369575/users/2898291405/executions/1003782500_775838323.log
== SUBMISSION (2025-08-27 22:52:33)
-- CODE: 
n3 / 3 = 3 / 3 = 1.0
m = n1 + n2 + (n3 / 3)
m = 5 + 4 + 1.0 = 10.0
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:54:01)
-- CODE: 
n1 + n2 + n3 = 5 + 4 + 3 = 12
(12) / 3 = 4.0
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n1 + n2 + n3 = 5 + 4 + 3 = 12
    ^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n1 + n2 + n3 = 5 + 4 + 3 = 12
    ^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:52:36)
-- CODE: 
n3 / 3 = 3 / 3 = 1.0
m = n1 + n2 + (n3 / 3)
m = 5 + 4 + 1.0 = 10.0
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:52:26)
-- CODE: 
n3 / 3 = 3 / 3 = 1.0
m = n1 + n2 + (n3 / 3)
m = 5 + 4 + 1.0 = 10.0
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:33)
-- CODE: 
n3 / 3 = 3 / 3 = 1.0
m = n1 + n2 + (n3 / 3)
m = 5 + 4 + 1.0 = 10.0
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:59:32)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:47:13)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = n1+n2+n3/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:24)
-- CODE: 
n3 / 3 = 3 / 3 = 1.0
m = n1 + n2 + (n3 / 3)
m = 5 + 4 + 1.0 = 10.0
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n3 / 3 = 3 / 3 = 1.0
    ^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:54:00)
-- CODE: 
n1 + n2 + n3 = 5 + 4 + 3 = 12
(12) / 3 = 4.0
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n1 + n2 + n3 = 5 + 4 + 3 = 12
    ^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    n1 + n2 + n3 = 5 + 4 + 3 = 12
    ^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
